--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,11 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: APCSA
-description: AP Computer Science A
-github_username: nighthawkcoders
+title: RAYJ Music
+description: RAYJ Music
+github_username: peacekeeper6
 # you can comment the below line out if your repo name is not different than your baseurl
-github_repo: "APCSA"
+github_repo: "RAYJ Music"
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
