remove twitter and yt socials

--- a/_config.yml
+++ b/_config.yml
@@ -39,9 +39,9 @@ baseurl: "/RAYJ-final" # the subpath of your site, e.g. "/blog".
 # Github and twitter are optional:
 minima:
   social_links:
-    twitter: NighthawkCoding
+    # twitter: NighthawkCoding
     github: peacekeeper6
-    youtube_channel: UClIKOsDS5dsfzFA3zveDT3Q
+    # youtube_channel: UClIKOsDS5dsfzFA3zveDT3Q
 
 # Set this to true to get LaTeX math equation support
 use_math: 
